flux/dmz/traefik/traefik-release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    network-zone: dmz
